\`Bugfix\`: Address review feedback on interview rating
- DTO: add @JsonInclude(NON_NULL) to match other interview DTOs
- Service: drop @Transactional(readOnly=true) per server guidelines
  (single-repo read-only queries should not use it); use List.getFirst()
- Resource: log endpoint with description on entry and outcome on exit,
  matching the existing GET /api/interviews/* pattern
- Client: replace literal toast strings with translation key
  evaluation.errors.loadInterviewRating (EN + DE)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>